Add paths and circles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
     </head>
     <body style="text-align: center; padding: 8px;">
-        <canvas id="canvas" width="800px" height="600px"></canvas>
+        <canvas id="webgl" style="width:90vw; height:90vh"></canvas>
         <script src="index.js"></script>
     </body>
 </html>
